--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -4,32 +4,39 @@ on:
     branches:
       - master
 env:
-  AWS_REGION: ap-south-1                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: host-react-app          # set this to your Amazon ECR repository name
+  AWS_REGION: us-east-2                   # set this to your preferred AWS region, e.g. us-west-1
+  ECR_REPOSITORY: reactloans-devops          # set this to your Amazon ECR repository name
   ECS_SERVICE: ReactService                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: ReactCluster                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: task-definition.json # set this to the path to your Amazon ECS task definition
+  ECS_CLUSTER: reactCluster                 # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: ./task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: ReactAppContainer           # set this to the name of the container in the
+  CONTAINER_NAME: reactcontainer           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
     environment: production
-steps:
+    
+    steps:
     - name: Checkout
-      uses: actions/checkout@v2
-- name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
+      uses: actions/checkout@v3
+#- name: Configure AWS credentials
+#       uses: aws-actions/configure-aws-credentials@v1
+#       with:
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v2
       with:
+        role-to-assume: arn:aws:iam::542629511084:user/dn_fs_demo
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
-- name: Login to Amazon ECR
+        aws-region: us-east-2
+        
+    - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
-- name: Build, tag, and push image to Amazon ECR
+      
+    - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
@@ -48,7 +55,7 @@ steps:
         task-definition: ${{ env.ECS_TASK_DEFINITION }}
         container-name: ${{ env.CONTAINER_NAME }}
         image: ${{ steps.build-image.outputs.image }}
-- name: Deploy Amazon ECS task definition
+    - name: Deploy Amazon ECS task definition
       uses: aws-actions/amazon-ecs-deploy-task-definition@v1
       with:
         task-definition: ${{ steps.task-def.outputs.task-definition }}
