--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -12,6 +12,8 @@ env:
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: reactcontainer           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
+permissions:
+ id-token: write
 jobs:
   deploy:
     name: Deploy
@@ -27,7 +29,7 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        role-to-assume: arn:aws:iam::542629511084:user/devops-r3-user
+        role-to-assume: arn:aws:iam::542629511084:role/github-actions-role
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-2
