--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -25,11 +25,11 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-#- name: Configure AWS credentials
-#       uses: aws-actions/configure-aws-credentials@v1
-#       with:
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v2
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+
+    #- name: Configure AWS Credentials
+    #  uses: aws-actions/configure-aws-credentials@v2
       with:
         role-to-assume: arn:aws:iam::542629511084:role/github-actions-role
         #aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
