--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -31,7 +31,7 @@ jobs:
     #- name: Configure AWS Credentials
     #  uses: aws-actions/configure-aws-credentials@v2
       with:
-        role-to-assume: arn:aws:iam::542629511084:role/github-actions-role
+        role-to-assume: arn:aws:iam::542629511084:role/github-action-role
         #aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         #aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
