--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v2
       with:
-        role-to-assume: arn:aws:iam::542629511084:role/github-action-role
+        role-to-assume: arn:aws:iam::542629511084:role/github-actions-role
         aws-region: ${{ env.AWS_REGION }}
         
     - name: Login to Amazon ECR
